# Spotify-TUI

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.yml  install.sh  spotifytui  uninstall.sh
src/: api.rs  app.rs  auth.rs  config.rs  dotenv.rs  logs.rs  main.rs  maintenance.rs  setup.rs  ui.rs
