[package]
name = "spotifytui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "spt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.29"
rand = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"
webbrowser = "1"
